# Gym-Admin

./: .gitignore  CMakeLists.txt  main.cpp  person.cpp  person.h
.cache/clangd/index/: debugLogger.cpp.147127214CCAA270.idx  debugLogger.h.B6FA66117F55D730.idx  main.cpp.99DFDF60EA7951D3.idx  mainwindow.cpp.52761F0B618C3176.idx  mainwindow.h.5C5BFAD7E164B480.idx  person.cpp.D22770CFCEE68A72.idx  person.h.88E7FBD866394F53.idx
DBMgr/include/: DBMgr.h
DBMgr/src/: DBMgr.cpp
GUIMgr/: AdminWidget.cpp  AdminWidget.ui  HomeWidget.ui  homepage.cpp  homepage.h  homepage.ui  memberspage.cpp  memberspage.h  memberspage.ui
GUIMgr/include/: HomeWidget.h  MemberWidget.h  PayementsWidget.h  ReportsWidget.h
GUIMgr/src/: HomeWidget.cpp  MemberWidget.cpp  PayementsWidget.cpp  ReportsWidget.cpp
GymAdmin/: GymAdmin.qmlproject  GymAdmin.qmlproject.qtds
GymAdmin/GymAdmin/: Constants.qml  DirectoryFontLoader.qml  EventListModel.qml  EventListSimulator.qml  qmldir
GymAdmin/GymAdmin/designer/: plugin.metainfo
GymAdmin/GymAdminContent/: App.qml  Screen01.ui.qml
Mgr/include/: HomeWidget.h  mainwindow.h  person.h
Mgr/src/: maintabwidget.cpp  maintabwidget.h  maintabwidget.ui  mainwindow.cpp  mainwindow.ui
Utilities/include/: debugLogger.h
Utilities/src/: debugLogger.cpp
